tests/data/validations/destinationrules/disabled_meshwide_checker_1.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "disable-mesh-mtls"
  namespace: "istio-system"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "disable-mesh-mtls"
  namespace: "istio-system"
spec:
  mtls:
    mode: DISABLE
