tests/data/validations/destinationrules/disabled_meshwide_checker_3.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: "mesh-enable-mtls"
  namespace: "istio-system"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "disable-grafana-mtls"
  namespace: "bookinfo"
spec:
  selector:
    matchLabels:
      app: grafana
  mtls:
    mode: DISABLE
