tests/data/validations/destinationrules/no-subset-labels-checker.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: "no-subset-labels"
  namespace: "bookinfo"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE
